deploy/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saedi

spec:
  selector:
    matchLabels:
      app: saedi
  replicas: 1
  template:
    spec:
      containers:
#        - name: couchbase
#          image: docker.io/leonidv/idel-couchbase:test
#          imagePullPolicy: Always
#          ports:
#            - containerPort: 8091
#            - containerPort: 8092
#            - containerPort: 8093
#            - containerPort: 8094
#            - containerPort: 11210

        - name: backend
          image: docker.io/leonidv/idel-backend:test
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
