deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saedi-service

spec:
  selector:
    app: saedi
  ports:
    - port: 8080
      name: backend-api
#    - port: 8091
#      name: couchbase-ui
