deploy/kubernetes/base/webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  labels:
    app: webui
spec:
  selector:
    matchLabels:
      app: webui
  replicas: 1
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
        - name: webui
          image: docker.io/leonidv/saedi-webui:test
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: webui-service
spec:
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 80
      name: webui-http
