deploy/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saedi-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - api.test.saedi.io
      secretName: tls-ap.test.saedi.io

  rules:
#    - host: couchbase.test.saedi.io
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: saedi-service
#                port:
#                  name: couchbase-ui

    - host: api.test.saedi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saedi-service
                port:
                  name: backend-api
